# rodeit

./: .env  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  docker-compose.yml  documentation.md  setup.sh  test.db
.github/workflows/: static.yml
docs/: .prettierrc.json  config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
docs/src/: index.ts  index.vue
docs/util/: openapi.ts
migrations/: 20231210210902_t.sql
services/bucket_list/: .dockerignore  Cargo.toml  Dockerfile  build.rs  dev.sh  openapi.json
services/bucket_list/src/: auth.rs  main.rs  router.rs
services/bucket_list/src/model/: coaster.rs  country.rs  manufacturer.rs  mod.rs  park.rs
services/credit/: Cargo.toml  credit.py  models.py  swagger.yml
services/credit/rust/src/record/: mod.rs
services/credit/src/: dbhandler.rs  main.rs  record.rs
services/credit/src/record/: mod.rs
services/records/: .gitignore  Dockerfile  __init__.py  api.py  config.py  credit.py  docker-compose.yml  models.py  record.py  records.py  requirements.txt  swagger.yml
services/records/rust/: Cargo.toml
services/records/rust/src/: main.rs
services/user/: .env  Cargo.toml  Dockerfile  docker-compose.yml  openapi.json
services/user/src/: main.rs  models.rs
src/: main.rs  models.rs
web/: .dockerignore  .env  .eslintrc.json  .prettierignore  .prettierrc.json  Dockerfile  README.md  astro.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: app.css.ts  app.tsx  aria_current.ts  country_flags.ts  env.d.ts  model.ts  session.ts  user_session.ts
web/src/api/: captain_coaster_types.ts  mod.ts  rodeit_types.ts  types.ts
web/src/components/: coaster.astro  coaster.css.ts
web/src/components/layouts/: profile.astro  profile.css.ts  root.astro
web/src/components/layouts/base/: index.astro  index.css.ts
web/src/components/layouts/profile/: index.astro  index.css.ts
web/src/pages/: index.astro
web/src/pages/coasters/: index.astro  index.css.ts
web/src/pages/coasters/[id]/: index.astro  index.css.ts
web/src/pages/login/: action.ts  index.astro  index.css.ts  post.ts
web/src/pages/logout/: index.ts
web/src/pages/profile/: delete.ts  index.astro  index.css.ts  update.ts
web/src/pages/profile/bucket_list/: add.ts  index.astro  index.css.ts
web/src/pages/profile/records/: add.ts  index.astro  index.css.ts
web/src/pages/signup/: action.ts  index.astro  index.css.ts
web/src/pages/users/[id]/: index.astro  index.css.ts
web/src/routes/: index.tsx
web/src/routes/coasters/: index.css.ts  index.tsx
web/src/routes/login/: index.tsx
web/src/styles/: colors.css.ts  fonts.css.ts  forms.css.ts
web/src/styles/atomic/: layouts.css.ts
web/src/styles/global/: mod.css.ts
web/src/styles/internal/: font.css.ts
(+3 files in other folders)
