[package]
name = "bucket_list"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.13.2", features = ["axum", "macros", "scalar"] }
anyhow = "1.0.75"
axum = "0.7.4"
reqwest = "0.11.22"
schemars = "0.8.16"
serde = "1.0.192"
serde_json = "1.0.108"
surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
tokio = { version = "1.34.0", features = ["full"] }
auth = { version = "0.1.0", path = "../../packages/auth"}
serde_with = "3.4.0"
futures = "0.3.29"
jsonwebtoken = "9.2.0"

