[package]
name = "credit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.12.0", features = [
    "axum",
    "axum-extra"
] }
axum = "0.6.20"
chrono = "0.4.31"
serde = "1.0.192"
tokio = { version = "1.34.0", features = ["full"] }
schemars = { version = "0.8.10", features = ["uuid1"] }
uuid = { version = "1.5.0", features = ["v4"] }
