[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
auth = { version = "0.1.0", path = "../../packages/auth"}
axum = "0.7.4"
serde = { version="1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7", features = [ "runtime-async-std", "sqlite"] }
tokio = { version = "1.34.0", features = ["full"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
